--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+</dependencies>
     <build>
         <plugins>
             <plugin>
@@ -29,7 +42,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.codemoshtutorial.Main</mainClass>
+                                    <mainClass>main.codemoshtutorial.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
